# xdg-document-portal

./: .gitignore  Makefile.am  README.md  configure.ac  org.freedesktop.portal.DocumentPortal.service.in  org.freedesktop.portal.documents.xml  xdg-document-portal.c  xdg-document-portal.gresource.xml  xdp-add-local.c  xdp-add.c  xdp-cat.c  xdp-doc-db.c  xdp-doc-db.h  xdp-document.c  xdp-document.h  xdp-enums.h  xdp-error.c  xdp-error.h  xdp-fuse.c  xdp-info.c  xdp-main.c  xdp-main.h  xdp-new-local.c  xdp-new.c  xdp-permissions.c  xdp-permissions.h  xdp-tool.c  xdp-update.c  xdp-util.c  xdp-util.h
